<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintGuide_percent="0.66"
			android:orientation="vertical"/>

		<TextView
			android:id="@+id/programme_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/trainer_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/programme_name" />

		<RatingBar
			style="@style/RatingBar"
			android:id="@+id/programme_rating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/trainer_name" />

		<TextView
			android:id="@+id/weight_loss"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/programme_rating"
			android:text="@string/weight_loss"/>

		<ProgressBar
			android:id="@+id/weight_loss_rating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/weight_loss"/>

		<TextView
			android:id="@+id/muscle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/weight_loss_rating"
			android:text="@string/muscle"/>

		<ProgressBar
			android:id="@+id/muscle_rating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/muscle"/>

		<TextView
			android:id="@+id/strength"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/muscle_rating"
			android:text="@string/strength"/>

		<ProgressBar
			android:id="@+id/strength_rating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/strength"/>

		<TextView
			android:id="@+id/flexibility"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/strength_rating"
			android:text="@string/flexibility"/>

		<ProgressBar
			android:id="@+id/flexibility_rating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/flexibility"
			android:indeterminate="false" />

		<com.google.android.material.chip.ChipGroup
			android:id="@+id/tags"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="@id/guideline"
			app:layout_constraintTop_toBottomOf="@id/flexibility_rating"
			app:layout_constraintBottom_toBottomOf="parent"/>

		<ImageView
			android:id="@+id/trainer_portrait"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintLeft_toLeftOf="@id/guideline"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:contentDescription="@string/trainer_portrait" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>